argocd/manifests/3dprintcalc/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: printcalc
  namespace: 3dprintcalc
  labels:
    app: printcalc
    app.kubernetes.io/name: printcalc
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: printcalc
