argocd/manifests/3dprintcalc/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: printcalc-ingress
  namespace: 3dprintcalc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  labels:
    app: printcalc
    app.kubernetes.io/name: printcalc
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - 3dprintcalc.levangie.org
  rules:
    - host: 3dprintcalc.levangie.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: printcalc
                port:
                  number: 5000
